# ominiAnalytics

./: docker-compose.yaml  nginx.conf
src/backend/: .gitignore  Cargo.toml  Dockerfile  README.md  diesel.toml  docker-entrypoint.sh  todo.md  wait-for-it.sh
src/backend/migrations/00000000000000_diesel_initial_setup/: down.sql  up.sql
src/backend/migrations/2022-08-25-182715_create_task/: up.sql
src/backend/migrations/2022-08-26-084827_create_alive_messages/: down.sql  up.sql
src/backend/migrations/2022-08-26-093932_omini_user/: down.sql  up.sql
src/backend/migrations/2022-08-31-145557_omini_users/: down.sql  up.sql
src/backend/migrations/2022-08-31-150849_omini_alive_messages/: down.sql  up.sql
src/backend/migrations/2022-08-31-151336_omini_calls/: down.sql  up.sql
src/backend/migrations/2022-09-09-200523_device_index/: down.sql  up.sql
src/backend/migrations/2022-09-12-214028_user_exists_func/: down.sql  up.sql
src/backend/migrations/2022-09-13-205410_create_event_table/: down.sql  up.sql
src/backend/migrations/2022-09-13-211338_event_log_table/: down.sql  up.sql
src/backend/migrations/2022-09-14-170116_managers-table/: down.sql  up.sql
src/backend/migrations/2022-09-15-220725_rules/: down.sql  up.sql
src/backend/src/: config.rs  config.yaml  errors.rs  main.rs  models.rs  security.rs
src/backend/src/api/: alive.rs  alive_api.rs  alive_db.rs  constants.rs  errors.rs  mod.rs  security.rs  structs.rs  task.rs  uid.rs  uid_api.rs  uid_db.rs
src/backend/src/api/alive/: db.rs  endpoint.rs  mod.rs
src/backend/src/api/custom/: mod.rs  structs.rs
src/backend/src/api/event/: handlers.rs  mod.rs  sql.rs  structs.rs
src/backend/src/api/event/alive/: endpoint.rs  handlers.rs  mod.rs
src/backend/src/api/event/custom/: endpoint.rs  handlers.rs  mod.rs
src/backend/src/api/main/: crypto.rs  db.rs  device.rs  endpoint.rs  handlers.rs  mod.rs  sql.rs  structs.rs
src/backend/src/dashboard/: mod.rs
src/backend/src/dashboard/auth/: handlers.rs  login.rs  mod.rs  sql.rs  structs.rs
src/backend/src/dashboard/events/: endpoint.rs  handlers.rs  mod.rs  sql.rs  structs.rs
src/backend/src/dashboard/metrics/: mod.rs
src/backend/src/dashboard/metrics/users/: endpoint.rs  handlers.rs  mod.rs  sql.rs  structs.rs
src/backend/src/db/: mod.rs
src/backend/src/db/models/: model.rs
src/backend/src/db/postgres/: postgres.rs
src/backend/src/schema/: mod.rs
src/frontend/: .env.development  .env.production  .eslintignore  .eslintrc.cjs  .prettierrc  README.md  frontend.code-workspace  package-lock.json  package.json  tailwind.config.js  tsconfig.json  webpack.config.js
src/frontend/src/: App.tsx  react-app-env.d.ts
src/jslib/: .eslintrc.cjs  .eslintrc.js  .gitignore  package-lock.json  package.json  webpack.config.js
src/jslib/src/: aliveTracker.js  api.js  deviceInfoTracker.js  eventTracker.js  index.js  locationInfoTracker.js  (+4 more)
src/test-js/: .eslintrc  package-lock.json  package.json  test-js.code-workspace  test.html  tsconfig.json
test/: test.html
(+24 files in other folders)
