[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "^4"
actix-rt = "^2.7.0"
actix-cors = "^0.6"
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
env_logger = "0.9.0"
log = "^0.4"
derive_more = "^0.99"
diesel = { version = "^2", features = ["postgres", "r2d2", "chrono", "uuid", "numeric","serde_json"] }
uuid = {version = "0.8.2", features=["serde","v4"]} # Diesel v2 only works with uuid 0.8.2
dotenv = "0.15.0"
r2d2 = "0.8.9"
tokio = { version = "^1.20.1", features = ["rt-multi-thread", "macros"] }
serde_yaml = "^0.9"
regex = "^1"