[package]
name = "backend"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
actix-web= "^4"
actix-rt = "^2.7.0"
actix-cors = "^0.6"
actix-session = {version="^0.7",features =["cookie-session"]}
serde = { version = "^1", features = ["derive"]}
serde_json = "^1"
env_logger = "0.9.0"
log = "^0.4"
derive_more = "^0.99"
diesel = { version = "^2", features = ["postgres", "r2d2", "chrono", "uuid", "numeric","serde_json"] }
uuid = {version = "1.0.0", features=["serde","v4"]} # Tokio postgres only works with uuid 0.8.2
dotenv = "0.15.0"
r2d2 = "0.8.9"
tokio = { version = "^1.20.1", features = ["rt", "rt-multi-thread", "macros"]  }
serde_yaml = "^0.9"
regex = "^1"
tokio-postgres = {version="^0.7", features=["with-uuid-1","with-serde_json-1"]}
tokio-pg-mapper = "^0.2.0"
tokio-pg-mapper-derive = "^0.2.0"
deadpool-postgres = { version = "^0.10", features = ["serde"] }
chrono = "^0.4.5"
base64 = "^0.13"
sha2 = "^0.10"
hmac = "^0.12"
hex= "^0.4"
postgres-types = {version="^0.2",features = ["derive", "with-serde_json-1"]}
